syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme";
option java_outer_classname = "TestProtos";

package test;

message Item {
  string value = 1;
}

service Streaming {
  rpc unary(Item) returns (Item) {}  // Reads a streams and return a single item
  rpc bidiStreaming(stream Item) returns (stream Item) {}  // Reads a streams and return a streams
  rpc serverStreaming(Item) returns (stream Item) {}  // Reads a single item and return a streams
  rpc clientStreaming(stream Item) returns (Item) {}  // Reads a streams and return a single item
}